--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,15 +11,14 @@ file(GLOB HEADERS "src/*.h")
 source_group("Include" FILES ${INCLUDE})
 source_group("" FILES ${INCLUDE} ${SOURCES} ${HEADERS}) 
 source_group("Source Files" FILES "src/main.cpp") 
-source_group("Source Files\\camera" FILES "src/ICamera.h" "src/CameraPerspective.h")
-source_group("Source Files\\lights" FILES "src/ILight.h" "src/LightPoint.h" "src/LightArea.h")
-source_group("Source Files\\primitives" FILES "src/Prim.h" "src/PrimSphere.h" "src/PrimPlane.h")
-source_group("Source Files\\primitives\\triangle" FILES "src/PrimTriangle.h" "src/PrimTriangleSmooth.h" "src/PrimTriangleSmoothTextured.h")
-source_group("Source Files\\shaders" FILES "src/IShader.h" "src/ShaderFlat.h" "src/ShaderEyelight.h" "src/ShaderEyelightTextured.h" "src/ShaderPhong.h" "src/ShaderPhongBumpMapped.h")
-source_group("Source Files\\scene" FILES "src/Scene.h" "src/Scene.cpp")
-source_group("Source Files\\utilities" FILES "src/ray.h" "src/texture.h" "src/random.h" "src/timer.h")
-source_group("Source Files\\utilities\\BSP Tree" FILES "src/BSPNode.h" "src/BSPTree.h" "src/BoundingBox.h")
-source_group("Source Files\\utilities\\sample generators" FILES "src/SampleGenerator.h" "src/SampleGeneratorRandom.h" "src/SampleGeneratorRegular.h" "src/SampleGeneratorStratified.h")
+source_group("Source Files\\Cameras" FILES "src/ICamera.h" "src/CameraPerspective.h")
+source_group("Source Files\\Lights" FILES "src/ILight.h" "src/LightOmni.h")
+source_group("Source Files\\Primitives" FILES "src/IPrim.h" "src/PrimSphere.h" "src/PrimPlane.h" "src/PrimTriangle.h")
+source_group("Source Files\\Solids" FILES "src/Solid.h" "src/SolidQuad.h" "src/SolidCone.h" "src/SolidSphere.h")
+source_group("Source Files\\Shaders" FILES "src/IShader.h" "src/ShaderFlat.h" "src/ShaderEyelight.h" "src/ShaderPhong.h")
+source_group("Source Files\\Scene" FILES "src/Scene.h")
+source_group("Source Files\\utilities" FILES "src/ray.h" "src/timer.h")
+source_group("Source Files\\utilities\\BSP Tree" FILES "src/BSPNode.h" "src/BSPTree.h" "src/BoundingBox.h" "src/BoundingBox.cpp")
 
 # OpenCV package
 find_package(OpenCV 4.0 REQUIRED core highgui imgproc imgcodecs PATHS "$ENV{OPENCVDIR}/build")
@@ -47,7 +46,6 @@ add_definitions(-D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS)
 # Options
 include(CMakeDependentOption)
 option(ENABLE_BSP "Use Binary Space Partitioning (BSP) Tree for optimized ray traversal" ON)
-option(ENABLE_SUPERSAMPLING "Use super sampling" OFF)
 
 add_executable(eyden-tracer ${INCLUDE} ${SOURCES} ${HEADERS})
 
