--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ source_group("Source Files\\Primitives" FILES "src/IPrim.h" "src/PrimSphere.h" "
 source_group("Source Files\\Solids" FILES "src/Solid.h" "src/SolidQuad.h" "src/SolidCone.h" "src/SolidSphere.h")
 source_group("Source Files\\Shaders" FILES "src/IShader.h" "src/ShaderFlat.h" "src/ShaderEyelight.h" "src/ShaderPhong.h")
 source_group("Source Files\\Scene" FILES "src/Scene.h")
-source_group("Source Files\\utilities" FILES "src/ray.h" "src/timer.h")
+source_group("Source Files\\utilities" FILES "src/ray.h" "src/timer.h" "src/Texture.h")
 source_group("Source Files\\utilities\\BSP Tree" FILES "src/BSPNode.h" "src/BSPTree.h" "src/BoundingBox.h" "src/BoundingBox.cpp")
 
 # OpenCV package
